Fixes appearance of search field in header.
- For smaller screens the responsive is really messed up. Must be addressed
- I seem to experience X-files behavior for responsive class "visible-desktop":
  The DTU Findit brand disappears when going to a more narrow window and then reappears
  when going the an even more narrow window.

--- a/app/assets/stylesheets/responsive/search.css.scss
+++ b/app/assets/stylesheets/responsive/search.css.scss
@@ -3,11 +3,15 @@
 @media (min-width: 1200px) {
   #searchbar {
     .text-field-with-icons {
-      width: 580px;
+      width: 560px;
     }
 
     #q {
-      width: 500px;
+      width: 480px;
+    }
+
+    #search {
+      padding: 0px 12px;
     }
   }
 }
